bookshelf adddiv + doomsday

--- a/bookshelf/bookshelf.css
+++ b/bookshelf/bookshelf.css
@@ -482,7 +482,7 @@ select {
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 #addDiv {
-	position:absolute;
+	position:fixed;
 	width: auto;
 	height:auto;
 	top: calc(10% - 120px);
