--- a/Star wars speeder/style.css
+++ b/Star wars speeder/style.css
@@ -11,6 +11,14 @@
     /* background-color: green; */
 }
 
+#scorebord {
+    position: absolute;
+    z-index: 1;
+    color: white;
+    left: 2%;
+    font-size: 150%;
+}
+
 #score {
     position: absolute;
     right: 5%;
@@ -21,12 +29,36 @@
     color: white;
 }
 
+#showHitBoxText {
+    position: absolute;
+    right: 15%;
+    font-size: 200%;
+    /* font-weight: bold; */
+    z-index: 1;
+    top: 5%;
+    color: white;
+}
+
+#showHitBoxInput {
+    position: absolute;
+    right: 10%;
+    font-size: 300%;
+    /* font-weight: bold; */
+    width: 5%;
+    height: 5%;
+    z-index: 1;
+    top: 5%;
+    color: white;
+}
+
 #game {
     position: absolute;
     top: 50%;
     height: 450px;
     width: 100%;
-    background-color: cornsilk;
+    /* background-color: cornsilk; */
+    /* background-color: rgba(50, 8, 149, 0.308); */
+    background-color: rgba(33, 6, 51, 0.57);
     border: 1px solid black;
     transform: translateY(-50%);
 } 
@@ -36,7 +68,7 @@
     /* bottom: 150; */
     margin: 25px;
     height: 115px;
-    width: 306px;
+    width: 220px;
     /* background-color: brown; */
     /* transition: all 0.7 ease-out; */
     transition: 1s;
@@ -47,6 +79,8 @@
 
 #speederImg {
     object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .objectImg {
@@ -123,6 +157,25 @@
 #startGame {
     background-color: rgb(216, 192, 94);
 }
+
+#changePlace {
+    position: absolute;
+    left: 2%;
+    font-size: 200%;
+    /* font-weight: bold; */
+    width: 12%;
+    height: 9%;
+    z-index: 1;
+    bottom: 5%;
+    /* color: white; */
+    background-image: url("/images/space/background.png");
+}
+
+/* #changePlaceImg {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+} */
 
 .backgroundBottom {
     position: absolute;
