--- a/taipan/styles/style.css
+++ b/taipan/styles/style.css
@@ -41,35 +41,62 @@ body {
 
 
 
+#scores {
+  position: absolute;
+  /*height: 60vh;*/
+  /*min-height: 180px;*/
+  width: 100%;
+  /*height: 300px;*/
+  /*background-color: green;*/
+  /*z-index: 200;*/
+  /*top: 30vw;*/
+  top: 25vw;
+  bottom: 25vh;
+  overflow: auto;
+}
 
 #scoreTeam1 {
   position: absolute;
-  top: 30vw;
+  /*top: 30vw;*/
   left: 10vw;
   width: 25vw;
   /*background-color: green;*/
   text-align: center;
   color: blue;
+  /*padding-bottom: 20vh;*/
 }
 
 #scoreTeam2 {
   position: absolute;
-  top: 30vw;
+  /*top: 30vw;*/
   right: 10vw;
   width: 25vw;
   /*background-color: green;*/
   text-align: center;
   color: red;
+  /*margin-bottom: 20vh;*/
 }
 
+#endButton {
+  position: absolute;
+  top: -25px;
+  right: 2%;
+  height: 25px;
+}
 
+/*#emptySpace {
+  height: 20vh;
+  min-height: 170px;
+  background-color: green;
+}*/
 
 
 
 #inputRound {
   position: absolute;
-  display: sticky;
+  /*display: sticky;*/
   bottom: 0;
+  /*top: 80vh;*/
   height: 20vh;
   min-height: 170px;
   width: 100%;
