--- a/taipan/styles/gameDoneStyle.css
+++ b/taipan/styles/gameDoneStyle.css
@@ -21,8 +21,11 @@
     height: 100%;
     overflow: hidden;
     background-color: #fac5a8;
-    z-index: 1;
+    z-index: 4;
     font-size: 100%;
+    margin: 0;
+    padding: 0;
+  top: 0;
 }
 
 #rocket {
@@ -94,9 +97,18 @@
     animation: fadeIn 2s forwards;
 }
 
+#finalScore {
+  position: absolute;
+  top: 28%;
+  font-size: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: none;
+}
+
 #results-table {
     position: absolute;
-    top: 40%;
+    top: 30%;
     display: none;
     margin: 20px auto;
     border-collapse: collapse;
