--- a/taipan/styles/style.css
+++ b/taipan/styles/style.css
@@ -4,6 +4,7 @@ body {
   -webkit-text-size-adjust: 100%;
   font-family: Arial, sans-serif;
   overflow: hidden;
+  max-width: 1050px;
 }
 
 #dragon {
