--- a/bookshelf2.0/styles/groupStyle.css
+++ b/bookshelf2.0/styles/groupStyle.css
@@ -11,7 +11,7 @@
     align-items: center;    
 }
 
-#groupScreen .leftContainer {
+#groupScreen .leftContainer, #groupScreen .rightContainer {
     padding: 2%;
     height: 82.9%;
     /* height: 80.6%; */
