--- a/bookshelf2.0/styles/mainStyle.css
+++ b/bookshelf2.0/styles/mainStyle.css
@@ -98,6 +98,11 @@ body {
     overflow: hidden;
     margin-top: 1%;
     margin-bottom: 1px;
+    cursor: pointer;
+}
+
+.dvd:hover {
+    opacity: 75%;
 }
 
 .groupdvd {
