--- a/bookshelf2.0/styles/itemStyle.css
+++ b/bookshelf2.0/styles/itemStyle.css
@@ -394,9 +394,11 @@
 
 /* Responsive layout for smaller screens (phone) */
 @media (max-width: 768px) {
-    #itemScreen {
+    #itemScreen, #groupScreen {
         flex-direction: column;
         /* text-align: center; */
+        display: flex;
+        overflow-y: auto;
     }
 
     .leftContainer,
