--- a/bookshelf2.0/styles/mobileStyle.css
+++ b/bookshelf2.0/styles/mobileStyle.css
@@ -12,6 +12,7 @@
         position: static;
         transform: translateX(2.5%);
         width: 90%;
+        height: 80%;
     }
 
     #groupScreen .leftContainer,
@@ -23,5 +24,9 @@
 
     #case {
         top: 23%;
+    }
+
+    .dropdown-content {
+        max-height: 50px;
     }
 }
